--- a/RandomCatGif/Base.lproj/Main.storyboard
+++ b/RandomCatGif/Base.lproj/Main.storyboard
@@ -18,12 +18,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CatGifCell" id="5wQ-da-Ve4">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CatGifCell" rowHeight="100" id="5wQ-da-Ve4">
+                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5wQ-da-Ve4" id="LHb-fy-HNQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4v-Of-waJ" userLabel="CatThumbnail">
+                                            <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="80" id="DBB-Wo-dja"/>
+                                                <constraint firstAttribute="width" constant="80" id="x2Z-zl-Gos"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cat Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26Y-fX-8Dz" userLabel="CatName">
+                                            <rect key="frame" x="100" y="20" width="76" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erT-Cg-ggc" userLabel="CatID">
+                                            <rect key="frame" x="100" y="58.5" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="26Y-fX-8Dz" firstAttribute="top" secondItem="LHb-fy-HNQ" secondAttribute="top" constant="20" id="92s-Zx-fLP"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="erT-Cg-ggc" secondAttribute="trailing" constant="20" id="Asg-kH-Ohj"/>
+                                        <constraint firstItem="D4v-Of-waJ" firstAttribute="leading" secondItem="LHb-fy-HNQ" secondAttribute="leading" constant="10" id="Qe1-nS-sge"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="26Y-fX-8Dz" secondAttribute="trailing" constant="20" id="RYs-Rd-067"/>
+                                        <constraint firstItem="erT-Cg-ggc" firstAttribute="leading" secondItem="D4v-Of-waJ" secondAttribute="trailing" constant="10" id="T4v-wZ-ir1"/>
+                                        <constraint firstAttribute="bottom" secondItem="erT-Cg-ggc" secondAttribute="bottom" constant="20" id="WbX-CP-oqM"/>
+                                        <constraint firstItem="26Y-fX-8Dz" firstAttribute="leading" secondItem="D4v-Of-waJ" secondAttribute="trailing" constant="10" id="hc8-s3-SA0"/>
+                                        <constraint firstItem="D4v-Of-waJ" firstAttribute="top" secondItem="LHb-fy-HNQ" secondAttribute="top" constant="10" id="tEk-Do-Mzn"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
